# crypto-analytics

./: .gitignore  BACKTEST_COMPARISON_REPORT.md  CLAUDE.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tsconfig.json
data/scripts/: db-client.ts  db-stats.ts  export-futures-json.ts  export-json.ts  fetch-binance-futures.ts  fetch-binance.ts  fetch-cryptocompare.ts  init-db.ts  verify-extraction.ts
docs/: DATA_SOURCES.md  STAT_ARB_ROADMAP.md  STAT_ARB_WORKFLOW.md
python/: .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  pyproject.toml
python/src/: __init__.py
python/src/api/: main.py
python/src/api/routes/: backtest.py
python/src/backtest/: __init__.py  cointegration.py  engine.py  execution.py  metrics.py
scripts/: test-cointegration.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/analysis/: page.tsx
src/app/backtest/: page.tsx
src/app/backtest2/: page.tsx
src/app/charts/: page.tsx
src/components/: providers.tsx
src/data/: sectors.ts
src/hooks/: useBacktest.ts  useBinanceData.ts  useCachedScanner.ts  useCryptoCompareData.ts  useCryptoCompareList.ts  useCryptoData.ts  useDominanceData.ts  useFearGreedIndex.ts  useFundingRates.ts  useFuturesData.ts  useFuturesPairScanner.old.ts  useFuturesPairScanner.ts  useKalmanHedge.ts  useLocalPairScanner.old.ts  useLocalPairScanner.ts  useLocalPrices.ts  useMacroData.ts  useOnChainData.ts  usePairScanner.ts  usePythonBacktest.ts  useScannerProgress.ts  useSectorData.ts
src/lib/: statistics.ts
src/types/: arbitrage.ts  crypto.ts  macro.ts
(+49 files in other folders)
